@@ -2336,6 +2336,17 @@
       </component>
     </version>
   </module>
+  <module name="straw">
+    <version release="gnome-2.6">
+      <component name="straw" dir="straw" group="extras">
+        <podir dir="po"/>
+        <potname name="straw.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="totem">
     <version release="gnome-2.6">
       <component name="totem" dir="totem" group="fifth-toe">
