@@ -1,3 +1,7 @@
+2004-02-19  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added straw.
+
 2004-02-13  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-sharing.
